VR: Move platform toast toward the bottom of the content

This change puts the toast over content, near the bottom, in a position
just above where a downloading snackbar appears.  It also removes the
linear layout that previously held more than one toast.

BUG=828515

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Iab15c457261e9887940c69140c9af607eb18f1cd
Reviewed-on: https://chromium-review.googlesource.com/998404
Reviewed-by: Biao She <bshe@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548776}
Former-commit-id: 656cb984996eb626fcc2c123d201d57c81ecba34